# fastapi-ipex-serving

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml
fastapi_ipex_serving/: main.py
